# rafko

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  compile_commands.json  sparse_net_global.h  sparsenet_global.h  y  y.pub
examples/: .gitignore  CMakeLists.txt  README.md  create_network.cc  create_network.cpp  evaluate_network.cc  execute_network.cc  execute_network.cpp  optimize_network.cc  optimize_network.cpp
src/main/cxx/: .gitignore  CMakeLists.txt  README.md  rafko_config.cmake  rafko_config_template.hpp  rafko_convenience_header.cmake  rafko_global.h  rafko_global.hpp  rafko_lib_config.cmake
src/main/cxx/rafko_gym/: CMakeLists.txt
src/main/cxx/rafko_gym/models/: data_aggregate.h  rafko_agent.h  rafko_agent.hpp  rafko_backprop_network_input_operation.h  rafko_backprop_neuron_input_operation.h  rafko_backprop_neuron_spike_output_operation.h  rafko_backprop_objective_operation.h  rafko_backprop_spike_fn_operation.h  rafko_backprop_transfer_fn_operation.h  rafko_backpropagation.h  rafko_backpropagation_data.h  rafko_backpropagation_data.hpp  rafko_backpropagation_operation.h  rafko_cost.h  rafko_cost.hpp  rafko_dataset.hpp  rafko_dataset_cost.h  rafko_dataset_implementation.hpp  rafko_dataset_wrapper.h  rafko_dataset_wrapper.hpp  rafko_environment.h  rafko_environment.hpp  rafko_network_delta_chain_link.h  rafko_network_proxy.h  rafko_objective.h  rafko_objective.hpp  rafq_environment.hpp  rafq_set.hpp
src/main/cxx/rafko_gym/services/: agent.h  backpropagation_queue_wrapper.h  cost_function.h  cost_function.hpp  cost_function_binary_cross_entropy.h  cost_function_binary_cross_entropy.hpp  cost_function_cross_entropy.h  cost_function_cross_entropy.hpp  cost_function_kl_divergence.hpp  cost_function_mse.h  cost_function_mse.hpp  cost_function_squared_error.h  cost_function_squared_error.hpp  environment.h  environment_data_set.h  function_factory.h  function_factory.hpp  rafko_agent.h  rafko_autodiff_gpu_optimizer.h  rafko_autodiff_gpu_optimizer.hpp  rafko_autodiff_gpu_strategy.h  rafko_autodiff_gpu_strategy.hpp  rafko_autodiff_ocl_optimizer.h  rafko_autodiff_optimizer.h  rafko_autodiff_optimizer.hpp  rafko_backprop_feature_operation.h  rafko_backprop_network_input_operation.h  rafko_backprop_network_input_operation.hpp  rafko_backprop_neuron_bias_operation.h  rafko_backprop_neuron_bias_operation.hpp  rafko_backprop_neuron_input_operation.h  rafko_backprop_neuron_input_operation.hpp  rafko_backprop_objective_operation.h  rafko_backprop_objective_operation.hpp  rafko_backprop_solution_feature_operation.h  rafko_backprop_solution_feature_operation.hpp  rafko_backprop_spike_fn_operation.h  rafko_backprop_spike_fn_operation.hpp  rafko_backprop_transfer_fn_operation.h  rafko_backprop_transfer_fn_operation.hpp  (+27 more)
src/main/cxx/rafko_mainframe/: CMakeLists.txt
src/main/cxx/rafko_mainframe/models/: rafko_autonomous_entity.hpp  rafko_gpu_strategy.h  rafko_gpu_strategy.hpp  rafko_gpu_strategy_phase.h  rafko_gpu_strategy_phase.hpp  rafko_nbuf_shape.h  rafko_nbuf_shape.hpp  rafko_ndarray_shape.h  rafko_opencl_wrapper.h  rafko_service_context.h  rafko_settings.h  rafko_settings.hpp  service_context.h
src/main/cxx/rafko_mainframe/services/: deep_learning_server.h  rafko_assertion_logger.h  rafko_assertion_logger.hpp  rafko_context.h  rafko_context.hpp  rafko_cpu_context.h  rafko_cpu_context.hpp  rafko_deep_learning_server.h  rafko_dummies.h  rafko_dummies.hpp  rafko_gpu_context.h  rafko_gpu_context.hpp  rafko_gpu_phase.h  rafko_gpu_phase.hpp  rafko_gpu_pipeline.h  rafko_ocl_factory.h  rafko_ocl_factory.hpp  rafko_training_logger.h  rafko_training_logger.hpp  server_slot.h  server_slot_approximize_net.h  server_slot_factory.h  server_slot_optimize_net.h  server_slot_run_net.h  training_logger.h
src/main/cxx/rafko_net/: CMakeLists.txt
src/main/cxx/rafko_net/models/: cost_function.h  cost_function_binary_cross_entropy.h  cost_function_cross_entropy.h  cost_function_mse.h  cost_function_squared_error.h  dense_net_weight_initializer.h  dense_net_weight_initializer.hpp  input_function.h  input_function.hpp  neuron_info.h  neuron_info.hpp  rafko_softmax_feature.h  spike_function.h  spike_function.h.orig  spike_function.hpp  transfer_function.h  transfer_function.hpp  weight_initializer.h  weight_initializer.hpp
src/main/cxx/rafko_net/services/: backpropagation_queue_wrapper.h  feature_group_cache.h  feature_group_cache.hpp  function_factory.h  neuron_router.h  neuron_router.hpp  partial_solution_builder.h  partial_solution_builder.hpp  partial_solution_solver.h  partial_solution_solver.hpp  rafko_net_builder.h  rafko_net_builder.hpp  rafko_net_feature_executor.h  rafko_network_feature.h  rafko_network_feature.hpp  rafko_weight_updater.h  solution_builder.h  solution_builder.hpp  solution_solver.h  solution_solver.hpp  sparse_net_builder.h  synapse_iterator.h  synapse_iterator.hpp  updater_factory.h  weight_experience_space.h  weight_updater.h  weight_updater_adam.h  weight_updater_amsgrad.h  weight_updater_momentum.h  weight_updater_nesterov.h  weight_updater_nesterovs.h
src/main/cxx/rafko_protocol/: CMakeLists.txt  common.proto  deep_learning_service.proto  logger.proto  rafko_net.proto  rafko_net.proto.orig  solution.proto  sparse_net.proto  training.proto
src/main/cxx/rafko_utilities/: CMakeLists.txt
src/main/cxx/rafko_utilities/models/: const_vector_subrange.h  const_vector_subrange.hpp  data_pool.h  data_pool.hpp  data_ringbuffer.h  data_ringbuffer.hpp  rafko_gpu_kernel_library.h  rafko_gpu_kernel_library.hpp  subscript_proxy.h  subscript_proxy.hpp
src/main/cxx/rafko_utilities/services/: rafko_math_utils.h  rafko_math_utils.hpp  rafko_string_utils.h  rafko_string_utils.hpp  thread_group.h  thread_group.hpp
src/main/cxx/sparse_net_library/models/: agent.h  cost_function.h  data_aggregate.h  data_pool.h  data_ringbuffer.h  dense_net_weight_initializer.h  neuron_info.h  spike_function.h  transfer_function.h  weight_initializer.h
src/main/cxx/sparse_net_library/services/: agent.h  neuron_router.h  (+19 more)
src/main/cxx/test/: CMakeLists.txt  test_utility.h  test_utility.hpp
(+447 files in other folders)
